src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__assignment_multiplied_statement.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E043]: Too many initial values for array `arr_1d`. Expected 5, found 6.
  ┌─ <internal>:4:49
  │
4 │                 arr_1d : ARRAY[1..5] OF DINT := [6(0)];
  │                                                 ^^^^^^ Too many initial values for array `arr_1d`. Expected 5, found 6.

error[E043]: Too many initial values for array `arr_2d`. Expected 10, found 11.
  ┌─ <internal>:6:55
  │
6 │                 arr_2d : ARRAY[1..2, 1..5] OF DINT := [11(0)];
  │                                                       ^^^^^^^ Too many initial values for array `arr_2d`. Expected 10, found 11.

error[E043]: Too many initial values for array `arr_2d_nested`. Expected 10, found 11.
  ┌─ <internal>:7:71
  │
7 │                 arr_2d_nested : ARRAY[1..2] OF ARRAY[1..5] OF DINT := [11(0)];
  │                                                                       ^^^^^^^ Too many initial values for array `arr_2d_nested`. Expected 10, found 11.

error[E043]: Too many initial values for array `arr_3d`. Expected 8, found 9.
  ┌─ <internal>:9:61
  │
9 │                 arr_3d : ARRAY[1..2, 1..2, 1..2] OF DINT := [9(0)];
  │                                                             ^^^^^^ Too many initial values for array `arr_3d`. Expected 8, found 9.

error[E043]: Too many initial values for array `arr_3d_nested`. Expected 8, found 9.
   ┌─ <internal>:10:86
   │
10 │                 arr_3d_nested : ARRAY[1..2] OF ARRAY[1..2] OF ARRAY[1..2] OF DINT := [9(0)];
   │                                                                                      ^^^^^^ Too many initial values for array `arr_3d_nested`. Expected 8, found 9.

error[E043]: Too many initial values for array `arr_1d`. Expected 5, found 6.
   ┌─ <internal>:21:23
   │
21 │             arr_1d := [6(0)];
   │                       ^^^^^^ Too many initial values for array `arr_1d`. Expected 5, found 6.

error[E043]: Too many initial values for array `arr_2d`. Expected 10, found 11.
   ┌─ <internal>:22:23
   │
22 │             arr_2d := [11(0)];
   │                       ^^^^^^^ Too many initial values for array `arr_2d`. Expected 10, found 11.

error[E043]: Too many initial values for array `arr_2d_nested`. Expected 10, found 11.
   ┌─ <internal>:23:30
   │
23 │             arr_2d_nested := [11(0)];
   │                              ^^^^^^^ Too many initial values for array `arr_2d_nested`. Expected 10, found 11.

error[E043]: Too many initial values for array `arr_3d`. Expected 8, found 9.
   ┌─ <internal>:24:23
   │
24 │             arr_3d := [9(0)];
   │                       ^^^^^^ Too many initial values for array `arr_3d`. Expected 8, found 9.

error[E043]: Too many initial values for array `arr_3d_nested`. Expected 8, found 9.
   ┌─ <internal>:25:30
   │
25 │             arr_3d_nested := [9(0)];
   │                              ^^^^^^ Too many initial values for array `arr_3d_nested`. Expected 8, found 9.
